RAID-50: Reinstate public service point endpoint
