# api-svc/idl-raid-v2/src/raido-openapi-3.0.yaml
@@ -84,6 +84,12 @@ paths:
 
       # endregion
 
+  # region public endpoints (signing in and requesting authz, etc.)
+
+  /v2/public/list-service-point/v1:
+    $ref: "public-experimental.yaml#/paths/~1public-list-service-point"
+
+      # endregion
 
       # region Admin endpoints
             
